# hardver_ad_scraper

./: .gitignore  README.md  ad_extractor.py  ad_manager.py  desktop_notification_manager.py  main.py  pyproject.toml  requirements.txt
hardver_ad_scraper/: __init__.py  ad.py  hardver_ad_scraper.py  hardverdealscraper.py
hardverdealscraper/: __init__.py  deal.py  hardverdealscraper.py
